Bug #11045 Warnings compiling with VC++
Submitted: 2 Jun 2005 16:19 Modified: 7 Jul 2005 2:07
Reporter: Miguel Solorzano Email Updates:
Status: Closed
Category:Server: Compiling Severity:S3 (Non-critical)
Version:5.0 BK source OS:Microsoft Windows (Windows)
Assigned to: Jim Winstead Target Version:

[2 Jun 2005 16:19] Miguel Solorzano
Description:
Below the warnings:

default.c
D:\builds\mysql-5.0.7-beta\mysys\default.c(853) : warning C4047: '=' : 'const char *'
differs in levels of indirection from 'char (*)[512]'
viosocket.c
D:\builds\mysql-5.0.7-beta\vio\viosocket.c(429) : warning C4029: declared formal
parameter list different from definition
mi_create.c
D:\builds\mysql-5.0.7-beta\myisam\mi_create.c(670) : warning C4244: '=' : conversion from
'unsigned long ' to 'unsigned short ', possible loss of data
item_func.cpp
D:\builds\mysql-5.0.7-beta\sql\item_func.cpp(4696) : warning C4101: 'field' :
unreferenced local variable
D:\builds\mysql-5.0.7-beta\sql\item_subselect.cpp(1339) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
item_sum.cpp
D:\builds\mysql-5.0.7-beta\sql\item_sum.cpp(2278) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\item_sum.cpp(3050) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
log.cpp
D:\builds\mysql-5.0.7-beta\sql\log.cpp(1814) : warning C4102: 'DBUG_skip_commit' :
unreferenced label
sql_acl.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_acl.cpp(2479) : warning C4101: 'key' : unreferenced
local variable
D:\builds\mysql-5.0.7-beta\sql\sql_acl.cpp(3219) : warning C4101: 'proc_type' :
unreferenced local variable
sql_derived.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_derived.cpp(143) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_derived.cpp(268) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
sql_insert.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_insert.cpp(204) : warning C4244: '=' : conversion from
'unsigned __int64' to 'unsigned long', possible loss of data
sql_parse.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_parse.cpp(3177) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_parse.cpp(3263) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_parse.cpp(3303) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_parse.cpp(5035) : warning C4018: '>=' :
signed/unsigned mismatch
sql_select.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_select.cpp(256) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_select.cpp(7986) : warning C4101: 'filename' :
unreferenced local variable
D:\builds\mysql-5.0.7-beta\sql\sql_select.cpp(8810) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_select.cpp(13575) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
sql_show.cpp
D:\builds\mysql-5.0.7-beta\sql\sql_show.cpp(3207) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(174) : warning C4244: '=' : conversion from
'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(196) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(297) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(437) : warning C4244: '=' : conversion from
'unsigned __int64' to 'unsigned int', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(503) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(525) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\sql_union.cpp(534) : warning C4244: 'argument' :
conversion from 'unsigned __int64' to 'unsigned long', possible loss of data
table.cpp
D:\builds\mysql-5.0.7-beta\sql\table.cpp(748) : warning C4244: '-=' : conversion from
'unsigned long' to 'unsigned short', possible loss of data
D:\builds\mysql-5.0.7-beta\sql\table.cpp(749) : warning C4244: '=' : conversion from
'unsigned long' to 'unsigned short', possible loss of data
unireg.cpp
D:\builds\mysql-5.0.7-beta\sql\unireg.cpp(671) : warning C4101: 'firstpos' : unreferenced
local variable
Generating Code...
Linking...

mysqld-nt.exe - 0 error(s), 39 warning(s)

How to repeat:
Compile it with VC++ 6.0
[7 Jun 2005 1:32] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25666
[17 Jun 2005 23:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/26145
[7 Jul 2005 1:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/26744
[7 Jul 2005 2:07] Jim Winstead
Fixed in 5.0.10.