Clean up warnings and build problems on Windows. (Bug #11045)