sql/sql_insert.cc
@@ -192,7 +192,7 @@ static int check_update_fields(THD *thd, TABLE_LIST *insert_table_list,
                                List<Item> &update_fields)
 {
   TABLE *table= insert_table_list->table;
-  ulong	timestamp_query_id;
+  query_id_it timestamp_query_id;
   LINT_INIT(timestamp_query_id);
 
   /*
